[metadata]
name = wildlife
author = Di Xu
author_email = stephenhsu90@gmail.com
summary = REST API Server interface to Apache Zookeeper
description-file = README.rst
keywords =
    wildlife
    zookeeper
    kazoo
license = Apache License, Version 2.0
home-page = https://github.com/dixudx/wildlife/
classifier =
    Development Status :: 2 - Pre-Alpha
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[pbr]
warnerrors = True

[files]
packages = wildlife

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
builders = html,man,linkcheck

[bdist_wheel]
universal=1
